src/serve/tests/requests/update/rel/snapshots/basiliq__serve__tests__requests__update__rel__sparse__unknown_fields.snap
---
source: basiliq/src/serve/tests/requests/update/rel/sparse.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteUnknownField",
    "detail": "No field AAAAAAAAAAAAA for type public__favorite_color."
  }
}
