src/serve/tests/requests/update/rel/snapshots/basiliq__serve__tests__requests__update__rel__sparse__unknown_type.snap
---
source: basiliq/src/serve/tests/requests/update/rel/sparse.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteUnknownType",
    "detail": "The json:api type `AAAAAAAAAAAAAA` is unknown."
  }
}
